--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,20 @@
   "compilerOptions": {
     "outFile": "./bin/game.js",
     "allowJs": true,
-    "strict": true
+    "strict": true,
+    "baseUrl": ".",
+    "skipLibCheck": true,
+    "paths": {
+      "dcldash": [
+        "node_modules/dcldash/dist/index.d.ts"
+      ],
+      "zootools": [
+        "node_modules/zootools/dist/index.d.ts"
+      ],
+      "colyseus.js": [
+        "node_modules/colyseus.js/dist/colyseus.d.ts"
+      ],
+    },
   },
   "include": ["src/**/*.ts"],
   "extends": "./node_modules/decentraland-ecs/types/tsconfig.json"
